# Internalized-Harness

./: .gitignore  AGENTS.md  New_Plan.md  New_Results.md  Plan.md  README.md  pyproject.toml  toy_experiment_plan.md
experiments/neural_claude_md/: README.md  __init__.py  ast_rewrite_generations.py  build_dataset.py  build_dataset_safety.py  build_gated_eval_split.py  build_internal_harness_a_data.py  build_nla_direction.py  causal_probe.py  common.py  evaluate_generations.py  evaluate_generations_safety.py  extract_activation_prefix_bundle.py  extract_caa_direction.py  extract_contrastive_direction.py  extract_contrastive_direction_fullpool.py  extract_system_delta_vector.py  layer_sweep.py  plot_results.py  run_generation.py  run_generation_gated.py  run_generation_internal_harness.py  run_generation_residual_controller.py  run_generation_soft_prefix.py  score_activation_prefix_preference.py  score_internal_harness_preference.py  score_kv_prefix_preference.py  select_gated_config.py  train_residual_controller_preference.py  train_soft_prefix_preference.py  validate_layer_alignment.py  verifier_rerank_generations.py
